# specter

./: .gitignore  README.md  pyproject.toml
examples/: basic_navigation.py  google_search_agent.py  quickstart.py
scripts/stealth/: patches.js
specter/: __init__.py  __main__.py
specter/actions/: __init__.py  click.py  extract.py  fill.py  navigate.py  screenshot.py  scroll.py  text.py  wait.py
specter/api/: __init__.py  http.py  types.py
specter/browser/: __init__.py  context.py  pool.py  process.py
specter/cdp/: __init__.py  session.py  transport.py  types.py
specter/evasion/: __init__.py  captcha.py  proxy.py  resources.py  solver.py
specter/install/: installer.py
specter/observability/: __init__.py  errors.py  metrics.py  tracer.py
specter/page/: __init__.py  axtree.py  budget.py  diff.py  readability.py  refs.py
specter/state/: __init__.py  cookies.py  memory.py  storage.py
specter/stealth/: __init__.py  headers.py  humanize.py  injections.py
