[project]
name = "specter"
version = "0.1.0"
description = "A high-performance, LLM-native headless browser harness built on Chrome Headless Shell and raw CDP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "tiktoken>=0.6",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
specter = "specter.__main__:main"
